# zephyr

boards/listenai/csk6011a_nano/: Kconfig.csk6011a_nano  Kconfig.defconfig  board.yml  csk6011a_nano.dts  csk6011a_nano.yaml  csk6011a_nano_defconfig  csk6011a_nano_pinctrl.dtsi
boards/listenai/csk6011a_nano/doc/: index.rst
cmake/modules/: dts.cmake
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.cs43l22  cs43l22.c
drivers/i2c/: i2c_esp32.c
drivers/kscan/: kscan_cst816s.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.csk6  pinctrl_csk6.c
dts/arm/listenai/csk6/: csk6.dtsi
dts/bindings/: vendor-prefixes.txt
dts/bindings/audio/: cirrus,cs43l22.yaml
dts/bindings/flash_controller/: listenai,csk-flash-controller.yaml
dts/bindings/gpio/: listenai,csk-gpio.yaml
dts/bindings/pinctrl/: listenai,csk6-pinctrl.yaml
dts/bindings/serial/: listenai,csk-uart.yaml
include/zephyr/bluetooth/services/: ancs_client.h  gattp.h
include/zephyr/dt-bindings/pinctrl/: csk6-pinctrl.h
soc/listenai/csk/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/listenai/csk/common/: pinctrl_soc.h
soc/listenai/csk/csk6/: Kconfig  Kconfig.defconfig.csk6011a  Kconfig.defconfig.series  (+1 more)
soc/riscv/esp32c3/: Kconfig.soc
soc/riscv/openisa_rv32m1/: CMakeLists.txt
subsys/bluetooth/: CMakeLists.txt  Kconfig  gatt_dm.c
subsys/bluetooth/services/: CMakeLists.txt  Kconfig  gattp.c
subsys/bluetooth/services/ancs/: CMakeLists.txt  ancs_app_attr_get.c  ancs_app_attr_get.h  ancs_attr_parser.c  ancs_attr_parser.h  ancs_client.c  ancs_client_internal.h
(+23 files in other folders)
